# xax

./: .gitignore  CLAUDE.md  Makefile  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: ljspeech.py  logging.py  lora_qwen3_shakespeare.py  mnist.py  mnist_diffusion.py  shakespeare.py  speech_generation.py
scripts/: export_tensorboard_audio.py  extract_latest_metric_from_log.py  update_api.py
tests/: conftest.py
tests/core/: test_conf_paths.py
tests/e2e/: test_train_e2e.py
tests/nn/: test_attention.py  test_distributions.py  test_embeddings.py  test_fp8.py  test_geom.py  test_llm.py  test_lora.py  test_metrics.py
tests/task/: test_artifacts_paths.py  test_cli_main.py  test_config_literals.py  test_experiment_monitor_skill_scripts.py  test_gpu_visibility.py  test_install_skills.py  test_logger.py  test_queue_cli.py  test_queue_state.py  test_queued_launcher.py
tests/utils/: test_cli_args.py  test_logging.py  test_pytree.py  test_structured_config.py  test_tensorboard.py  test_text.py
xax/: __init__.py  requirements-all.txt  requirements-dev.txt  requirements.txt
xax/agents/skills/experiment-monitor/: SKILL.md
xax/agents/skills/experiment-monitor/references/: queue-integration.md  table-schema.md  workflow.md
xax/agents/skills/experiment-monitor/scripts/: experiment_log_lib.py  render_experiment_report.py  start_experiment_session.py  sync_queue_status.py  upsert_experiment_log.py
xax/agents/skills/experiment-monitor/templates/: experiment_log.csv  experiment_report.md
xax/arch/: attention.py  diffusion.py  llm.py  mimi.py  ssm.py  unet.py
xax/arch/speech/: asr.py  codec.py
xax/cli/: edit_config.py  experiment.py  install_skills.py  main.py  queue.py
xax/core/: conf.py  state.py
xax/nn/: activation.py  attention.py  diffusion.py  distributions.py  embeddings.py  fp8.py  functions.py  lora.py  metrics.py  norm.py  ssm.py  unet.py
xax/task/: base.py  logger.py  script.py  task.py
xax/task/interfaces/: __init__.py  queued.py
xax/task/launchers/: cli.py  dataset.py  multi_cpu.py  multi_device.py  queue_state.py  queued.py  single_device.py
xax/task/loggers/: json.py  state.py  stdout.py  tensorboard.py  wandb.py
xax/task/mixins/: __init__.py  artifacts.py  checkpointing.py  compile.py  cpu_stats.py  data_loader.py  gpu_stats.py  logger.py  parallel.py  process.py  supervised.py  train.py
xax/utils/: cli_args.py  cli_output.py  debugging.py  devices.py  experiments.py  jax.py  logging.py  profile.py  pytree.py  run_dirs.py  structured_config.py  tensorboard.py  text.py
xax/utils/data/: collate.py
xax/utils/launcher/: __init__.py  cli.py  gpu_utils.py  gpu_visibility.py  multi_cpu.py  queue_state.py  queued.py  single_device.py  task_runner.py
xax/utils/types/: frozen_dict.py  training.py
