[project]

name = "xax"
description = "A library for fast Jax experimentation"
authors = [
    { name = "Benjamin Bolte", email = "ben@bolte.cc" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ["version"]

dependencies = [
    # Core ML/JAX dependencies
    "attrs",
    "chex",
    "datasets",
    "equinox",
    "etils",
    "importlib-resources",
    "jax",
    "jaxtyping",
    "optax",
    "orbax-checkpoint",

    # Data processing and serialization
    "pillow",

    # Configuration and project management
    "omegaconf",
    "gitpython",

    # Monitoring and logging
    "tensorboard",
    "psutil",

    # Networking
    "requests",
]

[project.urls]

Repository = "https://github.com/codekansas/xax"

[project.scripts]

xax = "xax.cli.main:main"

[project.optional-dependencies]

dev = [
    # Linting.
    "ruff",
    "ty",
    # Tests.
    "pytest",
    # Types.
    "types-pillow",
    "types-psutil",
    "types-requests",
]

wandb = [
    # Weights and Biases.
    "wandb[media]",
]

llm = [
    "huggingface_hub",
    "safetensors",
]

examples = [
    # Huggingface.
    "tokenizers",
    "transformers",
]

# All extra dependencies.
all = [
    "ruff",
    "ty",
    "pytest",
    "types-pillow",
    "types-psutil",
    "types-requests",
    "wandb[media]",
    "huggingface_hub",
    "safetensors",
    "tokenizers",
    "transformers",
]

[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]

where = ["."]
include = ["xax*"]

[tool.setuptools.package-data]

xax = [
    "*.py",
    "*.txt",
    "py.typed",
    "agents/**/*.md",
    "agents/**/*.txt",
    "agents/**/*.json",
    "agents/**/*.yaml",
    "agents/**/*.yml",
    "agents/**/*.csv",
    "agents/**/*.py",
]

[tool.setuptools.dynamic]

version = {attr = "xax.__version__"}

[tool.pytest.ini_options]

addopts = "-rx -rf -x -q --full-trace"
testpaths = ["tests"]

markers = [
    "slow: Marks test as being slow",
    "has_gpu: Marks test as requiring a GPU to run",
    "has_mps: Marks test as requiring an MPS device to run",
]

[tool.isort]

profile = "black"

[tool.ruff]

line-length = 120
target-version = "py311"

[tool.ruff.lint]

select = [
    "ANN",
    "B",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "W",
]

ignore = [
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "N812", "N817",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW0603", "PLW2901",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.mccabe]

max-complexity = 10

[tool.ruff.lint.isort]

known-first-party = ["xax", "tests"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]

convention = "google"
